# BufferVM

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  main.c
bootloader/: CMakeLists.txt  bootloader.ld  bootloader.s
bootstrap/: CMakeLists.txt  bootstrap.s
common/: CMakeLists.txt  elf.h  host.h  memory.c  memory.h  paging.c  paging.h  rbtree.h  stdlib_inc.h  syscall.h  syscall_as.h  tss.h  utils.h  version.h  vma.c  vma.h
example-program/: CMakeLists.txt  alloc.c  alloc.h  cstubs.S  cstubs.s  main.c  sbrk.c  sbrk.h  start.s  stdlib.c  stdlib.h  stubstart.s
example-program-2/: CMakeLists.txt  buffervm.S  buffervm.h  main.c
host_kernel/: Makefile  host_call.c
intelxed/: .gitignore  CMakeLists.txt  xed.patch
kernel/: CMakeLists.txt  kernel.ld  linker.py  start.S  start.s
kernel/asm/: cpu.S  host.S  host.s  idt.S  idt.s  page_fault.S  page_fault.s  start.S  syscall.S  tss.S
kernel/c/: cpu.c  cstubs.c  elf.c  gdt.c  idt.c  inat-tables.c  inat.c  insn.c  kernel.c  mmap.c  page_fault.c  rbtree.c  stack.c  syscall.c  tss.c  utils.c  version.c  vma.c  vma_heap.c
kernel/h/: cpu.h  elf.h  gdt.h  host.h  idt.h  inat-tables.h  inat.h  insn.h  kernel.h  kernel_as.h  rbtree.h  stack.h  syscall.h  syscall_as.h  tss.h  utils.h  version.h  vma.h  vma_heap.h
libc/: CMakeLists.txt  stddef.h  stdint.h  stdio.h  stdlib.c  stdlib.h  stdlib_inc.c  version.c  version.h
vm/: CMakeLists.txt  elf.c  elf.h  gdt.c  gdt.h  host.c  host.h  main.c  memory.c  memory.h  paging.c  vm.c  vm.h  vma.c  vma.h
